# dialogy-template-simple-transformers

./: .gitignore  .gitlab-ci.yml  2.diff  Dockerfile  LICENSE  README.md  copier.yaml  server_fault_notif.py
project/: .dockerignore  .gitignore  Dockerfile  Dockerfile.jinja  Makefile.jinja  README.md.jinja  pyproject.toml  pyproject.toml.jinja  uwsgi.ini
project/[[python_package_import_name]]/: constants.py.jinja
project/[[python_package_import_name]]/api/: __init__.py  endpoints.py.jinja
project/[[python_package_import_name]]/constants/: __init__.py.jinja
project/config/: config.yaml.jinja
slu/: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  Makefile  README.md  api_docs.md  build.sh  pyproject.toml  server_fault_notif.py  test_conc_requests.py
slu/.gitlab/merge_request_templates/: default.md
slu/config/: alias-train.yaml  config.yaml.jinja  prompts.yaml
slu/scripts/: run_test_cases_on_service.py
slu/slu/: test.py
slu/slu/constants/: __init__.py
slu/slu/dev/: cli.py  dev.py  dir_setup.py  evaluate.py  prepare.py  prompt_setup.py  release.py  repl.py  test.py  train.py  version.py
slu/slu/dev/io/mp/: __init__.py
slu/slu/dev/io/reader/: csv.py  pickle.py  sqlite.py
slu/slu/dev/plugin_parse/: plugin_functional_arguments.py  plugin_functions.py
slu/slu/src/api/: __init__.py  endpoints.py  models.py  thread_safe.py
slu/slu/src/controller/: custom_plugins.py  plugin_proxy.py  prediction.py  processors.py
slu/slu/src/workflow/: __init__.py
slu/slu/utils/: __init__.py  calibration.py  config.py  decorators.py  error.py  error_response.py  errors.py  ignore.py  logger.py  make_test_cases.py  merge_configs.py  preprocessing.py  s3.py  schema_parsing.py  sentry.py  slack.py  validations.py
slu/tests/: __init__.py
slu/tests/test_config/: test_config_creation.py
slu/tests/test_contextual_slu/: test.py  test_cases.yaml  test_prompt_config.py  test_prompt_setup.py
slu/tests/test_contextual_slu/data/: test_cases.yaml
slu/tests/test_contextual_slu/data/input/: config.yaml  nls-labels.csv  nls-labels.txt  prompt_config_1.yaml  prompt_config_3.yaml  prompt_config_4.yaml  prompt_config_5.yaml  sample_train.csv
slu/tests/test_contextual_slu/data/output/: missing_prompts.yaml
slu/tests/test_controller/: test_cases.yaml  test_predict.py  test_predict_api.py
slu/tests/test_intent_aliasing/: test.py
slu/tests/test_intent_aliasing/data/: test_cases.yaml
slu/tests/test_intent_aliasing/data/input/: invalid-alias-1.yaml  invalid-alias-2.yaml  invalid-alias-3.yaml
slu/tests/test_intent_aliasing/output/: prompts.yaml
(+34 files in other folders)
