[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "slu"
version = "0.0.0"
description = "An SLU core project."
authors = ["ltbringer <amresh.venugopal@gmail.com>",]

[tool.poetry.dependencies]
python = "^3.8"
simpletransformers = "^0.60.6"
coloredlogs = "^15.0"
PyYAML = "5.4.1"
scikit-learn = "^0.24.1"
pandas = "^1.2.2"
numpy = "^1.20.1"
seqeval = "^1.2.2"
Flask = "^1.1.2"
attrs = "^20.3.0"
toml = "^0.10.2"
semver = "^2.13.0"
torch = "^1.8.0"
dialogy = "0.7.1"
pydash = "^4.8.0"
uWSGI = "^2.0.19"
taskipy = "^1.6.0"
boto3 = "^1.17.96"

[tool.poetry.dev-dependencies]
tqdm = "^4.56.1"
stockholm-data-manager = "^0.14.1"
stockholm-aws-train = "^0.1.0"
semver = "^2.13.0"
docopt = "^0.6.2"
pylint = "^2.6.0"
mypy = "^0.800"
black = "^20.8b1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
GitPython = "^3.1.13"
prompt-toolkit = "^3.0.16"
isort = "^5.8.0"
minio = "^7.1.0"
httpretty = "^1.1.3"

[tool.poetry.scripts]
slu = "slu.dev.cli:main"

[tool.taskipy.tasks]
serve = "uwsgi --http :9002 --enable-threads --single-interpreter --threads  1 --callable=app --module slu.src.api.endpoints:app --ini uwsgi.ini"

[tool.poetry.dependencies.sentry-sdk]
extras = [ "flask",]
version = "^0.19.5"

[tool.poetry.dev-dependencies.dvc]
extras = [ "s3",]
version = "^1.11.16"
