[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "slu"
version = "0.0.0"
description = "An SLU core project."
authors = ["ltbringer <amresh.venugopal@gmail.com>",]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
simpletransformers = "^0.63.6"
coloredlogs = "^15.0"
PyYAML = "5.4.1"
scikit-learn = "^1.1.1"
pandas = "^1.2.2"
numpy = "^1.20.1"
seqeval = "^1.2.2"
attrs = "^20.3.0"
toml = "^0.10.2"
semver = "^2.13.0"
torch = "^1.8.0"
dialogy = "0.9.17"
pydash = "^4.8.0"
xgboost = "^1.4.2"
sklearn = "^0.0"
tabulate = "^0.8.9"
loguru = "^0.5.3"
dvc = {extras = ["s3"], version = "^2.6.4"}
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
sentry-sdk = "^1.5.8"
slack-sdk = "^3.18.1"

[tool.poetry.dev-dependencies]
tqdm = "^4.56.1"
taskipy = "^1.6.0"
semver = "^2.13.0"
pylint = "^2.6.0"
mypy = "^0.800"
black = "^20.8b1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
GitPython = "^3.1.13"
prompt-toolkit = "^3.0.16"
isort = "^5.8.0"
minio = "^7.1.0"
httpretty = "^1.1.3"

[tool.poetry.scripts]
slu = "slu.dev.cli:main"

[tool.taskipy.tasks]
serve = "uvicorn --workers 1 --port 9998 slu.src.api.endpoints:app"
test = "pytest tests"
